--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pointcheck-discord-bot",
+  "name": "want-a-cookie",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -14,9 +14,9 @@
   "author": "keith brosch",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/KeithBrosch/pointcheck-discord-bot/issues"
+    "url": "https://github.com/KeithBrosch/want-a-cookie/issues"
   },
-  "homepage": "https://github.com/KeithBrosch/pointcheck-discord-bot#readme",
+  "homepage": "https://github.com/KeithBrosch/want-a-cookie#readme",
   "dependencies": {
     "axios": "^1.7.2",
     "discord.js": "^14.15.3",
